syntax = "proto3";

option csharp_namespace = "RehabManagementSystem.GrpcServices";

package login;

// The login service definition.
service LoginService {
  // Handles user login
  rpc UserLogin (LoginRequest) returns (LoginReply);
}

// The request message containing the email and password.
message LoginRequest {
  string email = 1;
  string password = 2;
}

// The response message containingthe login status.
message LoginReply {
  bool success = 1;
  string message = 2;
}